# Fast-Polynomial-Interpolation-and-Evaluation

./: CMakeLists.txt  main.cpp  tests_gf2n.cpp  tests_gf2n.h  tests_zp.cpp  tests_zp.h  utils_gf2n.cpp  utils_gf2n.h  utils_zp.cpp  utils_zp.h  zp.cpp  zp.h
